refactor!: remove old-style language emitters, make IR emitters the default
The string-template emitters for Java, Kotlin, TypeScript and Python are
removed; every built-in language target now emits through the IR pipeline
unconditionally, and the `ir` opt-in flag is gone from the CLI (--ir),
Maven (<ir>) and Gradle (ir property). WirespecEmitter stays as the only
LanguageEmitter, since it prints Wirespec source itself.

Dependents migrated to the IR path:
- AvroExtension renders Java/Kotlin identifiers and types with inlined
  helpers instead of subclassing the old emitters
- jackson codegen and keyword handling use Java/KotlinIrEmitter
- spring drops SpringJava/KotlinEmitter in favor of the IR extensions;
  checked-in generated test classes regenerated via GenerateTestClasses
- openapi converter tests compile with KotlinIrEmitter

Bugs fixed along the way:
- KotlinGenerator cased constructor parameters differently from
  properties and named arguments (ranDoMQueRY vs RanDoMQueRY), producing
  uncompilable code for oddly-cased identifiers. Identifiers are now
  emitted verbatim post-sanitization (camelCase only for function names)
  and KotlinIrEmitter cases parameters and variable references exactly
  like fields. Emitter fixtures are unchanged.
- Spring's Java WirespecWebClient only searched the nested Handler
  interface for toRawRequest/fromRawResponse; it now also searches the
  endpoint class where the IR emitter declares them.

Examples and docs no longer reference the removed flag or classes.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>